--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@splidejs/splide": "^4.1.4",
     "normalize.css": "^8.0.1"
   }
 }
